include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = ghex2
DOC_ENTITIES =
DOC_INCLUDES = legal.xml
DOC_H_FILE = ghex2-docs.h
DOC_H_DOCS = C/ghex2.xml
DOC_FIGURES =	\
	figures/ghex_window_empty.png	\
	figures/ghex_window_open.png

DOC_LINGUAS = cs de es fr it ja ko oc sv th zh_CN zh_TW
