help_pages = [
  'index.docbook',
  'legal.xml'
]

help_media = [
  'figures/ghex_window_empty.png',
  'figures/ghex_window_open.png'
]

help_languages = [
  'cs',
  'de',
  'el',
  'es',
  'fr',
  'id',
  'it',
  'ja',
  'ko',
  'oc',
  'pt_BR',
  'ru',
  'sl',
  'sv',
  'th',
  'zh_CN',
  'zh_TW'
]

gnome.yelp(
  meson.project_name(),
  sources: help_pages,
  media: help_media,
  symlink_media: false,
  languages: help_languages
)
