NULL =

public_icons_themes = \
	hicolor \
	$(NULL)

public_icons = \
	hicolor_apps_16x16_ghex.png \
	hicolor_apps_22x22_ghex.png \
	hicolor_apps_24x24_ghex.png \
	hicolor_apps_32x32_ghex.png \
	hicolor_apps_48x48_ghex.png \
	hicolor_apps_256x256_ghex.png \
	hicolor_apps_512x512_ghex.png \
	hicolor_apps_scalable_ghex-symbolic.svg \
	$(NULL)

noinst_DATA = \
	source_ghex.svg \
	$(NULL)

EXTRA_DIST = \
	$(public_icons)		\
	$(noinst_DATA)		\
	$(NULL)

-include $(top_srcdir)/git.mk
