figs = \
	ghexconverter.png \
	ghexfindreplace.png  \
	ghexmenubar.png \
	ghexdisplaypref.png  \
	ghexfullwindow.png   \
	ghexprefedit.png \
	ghexfind.png \
	ghexmdiprefs.png \
	ghexprintprefs.png
app = ghex
lang = eu
omffiles=ghex-eu.omf
include $(top_srcdir)/app-docs.make
dist-hook: app-dist-hook
